feat: Static passwords and other features required for SOGo

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,8 +4,8 @@ on:
   push:
     tags:
       - "*"
-    #branches:
-    #  - 'workflows' # useful for testing
+#    branches:
+#      - 'mybranch' # useful for testing
 
 env:
   ghcr_latest_tag: "${{ github.ref_type == 'tag' && ',ghcr.io/vshn/ldaplogin:latest' || '' }}"
